--- a/view/SW-app/src/app/general/table/table.component.html
+++ b/view/SW-app/src/app/general/table/table.component.html
@@ -1,56 +1,59 @@
 <div class="container">
   <div 
-    *ngIf="spinnerState"
+  [hidden]="!spinnerState"
     class="spinner-container">
       <mat-spinner
       [mode]="'indeterminate'"
       [value]="50">
     </mat-spinner>
   </div>
-  <mat-table
+  <table mat-table
+      class="mat-elevation-z8"
       multiTemplateDataRows
-      [dataSource]=dataSource
-      matSort
-      matSortDisableClear>
-        <ng-container
+      [dataSource]=dataSource>
+        
+      <ng-container
           *ngFor="let column of columns"
-          cdkColumnDef="{{column.columnDef}}">
-          <mat-header-cell
-            *cdkHeaderCellDef
-            mat-sort-header>
+          matColumnDef="{{column.columnDef}}">
+          <th mat-header-cell *matHeaderCellDef>
             <span class="header-name">
               {{ column.header }}
             </span>
-          </mat-header-cell>
-          <mat-cell
-            *cdkCellDef="let row">
+          </th>
+          <td mat-cell *matCellDef="let row">
             {{getValue(column, row)}}
-          </mat-cell>
-        </ng-container>
-
-        <ng-container matColumnDef="expandedDetail">
-          <td mat-cell *matCellDef="let element" [attr.colspan]="displayedColumns.length">
-            <div class="example-element-detail"
-                 [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-              <div class="example-element-diagram">
-                <div class="example-element-position"> 1 </div>
-                <div class="example-element-symbol"> 2 </div>
-                <div class="example-element-name"> 3 </div>
-                <div class="example-element-weight"> 4 </div>
-              </div>
-              <div class="example-element-description">
-                {{element.description}}
-                <span class="example-element-description-attribution"> -- Wikipedia </span>
-              </div>
-            </div>
           </td>
-        </ng-container>
+      </ng-container>  
 
-    <mat-header-row *cdkHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row 
-    (click)="expandedElement = expandedElement === element ? null : element"
-    *cdkRowDef="let row; columns: displayedColumns"></mat-row>
-    <mat-row *cdkRowDef="let row; columns: ['expandedDetail']"></mat-row>
-  </mat-table>
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let row" [attr.colspan]="displayedColumns.length">
+          <div class="example-element-detail" 
+          fxLayout="row"
+          fxLayoutAlign="space-between stretch"
+                [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
+          <div>
+            <h3>Films</h3>
+            <ul>
+              <li *ngFor="let film of films">{{film.title}}</li>
+            </ul>
+          </div>
+          <div>
+              <h3>Residents</h3>
+              <ul>
+                <li *ngFor="let resident of residents"  >{{resident.name}}</li>
+              </ul>
+          </div>
+          </div>
+        </td>
+      </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row 
+    class="example-element-row"
+    *matRowDef="let row; columns: displayedColumns"
+    [class.example-expanded-row]="expandedElement === row"
+    (click)="expandedElement = expandedElement === row ? null : row; onRowClick(row, row === expandedElement)"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+  </table>
 
 </div>
