--- a/view/SW-app/src/app/general/table/table.component.html
+++ b/view/SW-app/src/app/general/table/table.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div 
-  [hidden]="!spinnerState"
+  *ngIf"spinnerState"
     class="spinner-container">
       <mat-spinner
       [mode]="'indeterminate'"
