--- a/view/SW-app/src/app/general/table/table.component.html
+++ b/view/SW-app/src/app/general/table/table.component.html
@@ -31,13 +31,14 @@
           fxLayout="row"
           fxLayoutAlign="space-between stretch"
                 [@detailExpand]="row === expandedElement ? 'expanded' : 'collapsed'">
-          <div>
+          <span *ngIf="spinnerState">Loading ...</span>
+          <div *ngIf="!spinnerState">
             <h3>Films</h3>
             <ul>
               <li *ngFor="let film of films">{{film.title}}</li>
             </ul>
           </div>
-          <div>
+          <div *ngIf="!spinnerState">
               <h3>Residents</h3>
               <ul>
                 <li *ngFor="let resident of residents"  >{{resident.name}}</li>
@@ -52,7 +53,8 @@
     class="example-element-row"
     *matRowDef="let row; columns: displayedColumns"
     [class.example-expanded-row]="expandedElement === row"
-    (click)="expandedElement = expandedElement === row ? null : row; onRowClick(row, row === expandedElement)"></tr>
+    (click)="expandedElement = expandedElement === row ? null : row; 
+    onRowClick(row, row === expandedElement)"></tr>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
   </table>
 
